Migrated too looped scheduling. AppContext correctly closed after program ends.