@@ -6,32 +6,24 @@ import edu.scheduling.RandomWheelSelector;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static java.util.stream.Collectors.*;
 
 
 @Service
-public final class SchedulingIntensitiesService {
+public class SchedulingIntensitiesService {
 
-    public List<ImmutablePair<Double, Integer>> probabilitiesAsPairList(List<PathIntensity> intensities) {
-        return intensities.stream().map(x -> new ImmutablePair<>(x.getIntensity(), x.getPath().getDestination())).collect(Collectors.toList());
+    public RandomWheelSelector<Integer> generateSelector(List<PathIntensity> intensities) {
+        return new RandomWheelSelector<>(
+                intensities.stream().map(x -> new ImmutablePair<>(x.getIntensity(), x.getPath().getDestination())).toList()
+        );
     }
 
     public Double sumOfIntensities(List<PathIntensity> intensities) {
         return intensities.stream().mapToDouble(PathIntensity::getIntensity).sum();
     }
 
-    public List<SchedulingIntensities> toSingleOrigin(List<PathIntensity> intensities) {
-        return intensities.stream()
-                .collect(groupingBy(x -> x.getPath().getOrigin()))
-                .entrySet()
-                .stream()
-                .map(e -> {
-                    var origin = e.getKey();
-                    var singleOriginIntensities = e.getValue();
-                    var randomWheelSelector = new RandomWheelSelector<>(probabilitiesAsPairList(singleOriginIntensities));
-                    return new SchedulingIntensities(origin, randomWheelSelector);
-                }).collect(toList());
+    public SchedulingIntensities toSingleOrigin(List<PathIntensity> intensities, Integer origin) {
+        var destinationSelector = generateSelector(intensities);
+        var probabilitySum = sumOfIntensities(intensities);
+        return new SchedulingIntensities(origin, probabilitySum, destinationSelector);
     }
 }
